# napari-labeller

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  launch-dev.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: index.md
src/napari_labeller/: __init__.py  _dataset_handling.py  _dock_widget.py  _function.py  _keybinds.py
src/napari_labeller/_tests/: test_dock_widget.py  test_function.py
src/napari_labeller/_ui/: labeller_gui.ui
