[metadata]
name = napari-labeller

author = Ian Hunt-Isaak, John Russell
author_email = ianhuntisaak@gmail.com jrussell25@gmail.com
url = https://github.com/Hekstra-Lab/napari-labeller
license = BSD-3-Clause
description = A plugindoing manual instance segmentation.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/Hekstra-Lab/napari-labeller/issues
    Documentation = https://github.com/Hekstra-Lab/napari-labeller#README.md
    Source Code = https://github.com/Hekstra-Lab/napari-labeller
    User Support = https://github.com/Hekstra-Lab/napari-labeller/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-labeller = napari_labeller
