[metadata]
name = napari_labeller
description = A plugindoing manual instance segmentation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hekstra-Lab/napari-labeller
author = Ian Hunt-Isaak, John Russell
author_email = ianhuntisaak@gmail.com johncrussell25@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/Hekstra-Lab/napari-labeller/issues
    Documentation = https://github.com/Hekstra-Lab/napari-labeller#README.md
    Source Code = https://github.com/Hekstra-Lab/napari-labeller
    User Support = https://github.com/Hekstra-Lab/napari-labeller/issues

[options]
packages = find:
install_requires =
    napari-plugin-engine>=0.1.4
    netcdf4
    numpy
    xarray
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.plugin =
    napari-labeller = napari_labeller

[flake8]
exclude = docs, _version.py, .eggs, example
max-line-length = 88
docstring-convention = "numpy"
ignore = E741
